exercises/exercise-5-custom-nginx/manifests/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: custom-nginx
  labels:
    app: custom-nginx
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: custom-nginx
